<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_blue_border"
    android:padding="2dp"
    android:layout_marginBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mega_contest"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/contest_name"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="50,000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/total_prize_value_tv"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/total_prize_tv"
        app:layout_constraintRight_toRightOf="@id/total_prize_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/contest_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_prize"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/total_prize_tv"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/coins_tv"
        app:layout_constraintTop_toBottomOf="@id/total_prize_value_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coins"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/coins_tv"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/total_prize_tv"
        app:layout_constraintEnd_toStartOf="@id/winners_tv"
        app:layout_constraintTop_toBottomOf="@id/total_prize_value_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winners"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/winners_tv"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/coins_tv"
        app:layout_constraintEnd_toStartOf="@id/playing_tv"
        app:layout_constraintTop_toBottomOf="@id/total_prize_value_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playing"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/playing_tv"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/winners_tv"
        app:layout_constraintTop_toBottomOf="@id/total_prize_value_tv"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/coins_value_tv"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/coins_tv"
        app:layout_constraintEnd_toEndOf="@id/coins_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/contest_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="4000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/winner_value_tv"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/winners_tv"
        app:layout_constraintRight_toRightOf="@id/winners_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/contest_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/playing_value_tv"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/playing_tv"
        app:layout_constraintRight_toRightOf="@id/playing_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/contest_name"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teamDetailsRv"
        app:layout_constraintTop_toBottomOf="@id/total_prize_tv"
        android:layout_marginTop="7dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        >

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>