<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="@drawable/rounded_blue_border"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pvt_contest"
        android:textStyle="bold"
        android:id="@+id/contest_name"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/team1_iv"
        app:layout_constraintTop_toBottomOf="@id/team1_score_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/total_prize_value_tv"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/max_players_tv"
        app:layout_constraintRight_toRightOf="@id/max_players_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/contest_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_players"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/max_players_tv"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/coins_tv"
        app:layout_constraintTop_toBottomOf="@id/total_prize_value_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teams_per_player"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/teams_per_player_tv"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/max_players_tv"
        app:layout_constraintEnd_toStartOf="@id/playing_tv"
        app:layout_constraintTop_toBottomOf="@id/total_prize_value_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playing"
        android:fontFamily="sans-serif"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/playing_tv"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@id/coins_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_prize_value_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/teams_per_player_value_tv"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/teams_per_player_tv"
        app:layout_constraintEnd_toEndOf="@id/teams_per_player_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/contest_name"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/playing_value_tv"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/playing_tv"
        app:layout_constraintRight_toRightOf="@id/playing_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/contest_name"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teamDetailsRv"
        app:layout_constraintTop_toBottomOf="@id/max_players_tv"
        android:layout_marginTop="7dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />



</android.support.constraint.ConstraintLayout>